Allow vertical scroll.

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -82,7 +82,7 @@ html, body {
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden !important;
+  overflow-x: hidden !important;
 }
 
 a {
